public/css/style.css
header {
    width: 100%;
    height: 60px;
    background-color: white;
    -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
    -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
    z-index: 1;
    position: relative;
}

header h1 {
    height: 100%;
    margin-top: 0;
    color: #444444;
    text-align: center;
}

header h1 span {
    padding-top: 10px;
    display: inline-block;
}

header #logo {
    padding: 5px;
    height: 100%;
    width: auto;
    float: left;
}

header #menu-btn {
    padding: 10px;
    height: 100%;
    width: auto;
    float: right;
}

footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 50px;
}

footer .glyphicon {
    font-size: 2em;
    display: block;
    margin: 0 auto;
    padding-top: 5px;
    color: #444444;
}

footer p {
    text-align: center;
}

.planner {
    z-index: 0;
    position: relative;
    height: 100%;
    height: 516px;
    padding-top: 15px;
}

footer a, footer a:hover {
    color: #444444;
    text-decoration: none;
}

#requirements {
    border-top: 1px solid #444444;
    border-left: 1px solid #444444;
    border-right: 1px solid #444444;
}

#planner, #add-class {
    border-top: 1px solid #444444;
}

